--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,8 +11,7 @@ html {
 body {
     font-family: 'Poppins', 'Montserrat', sans-serif;
     background-color: #232328;
-    background: rgb(71, 84, 135);
-    background: linear-gradient(67deg, rgba(71, 84, 135, 1) 6%, rgba(50, 46, 128, 1) 29%, rgba(58, 75, 142, 1) 49%, rgba(50, 46, 128, 1) 75%, rgba(71, 84, 135, 1) 100%);
+    background: rgb(253, 254, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,6 +27,12 @@ body {
     .container {
         width: 90%;
     }
+}
+
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .heading {
