--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,12 +15,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     -webkit-tap-highlight-color: transparent;
 }
 
 .container {
-    width: 30em;
+    width: 30rem;
 }
 
 @media (max-width:760px) {
@@ -33,15 +33,14 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: aqua;
 }
 
 .heading {
     color: #fff;
     text-align: center;
     text-shadow: 2px 2px 5px #2eb0cb;
-    font-size: 3rem;
-    font-weight: 600;
+    font-size: 4rem;
+    font-weight: 400;
 }
 
 
@@ -63,8 +62,8 @@ body {
     border-radius: 1rem;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
     position: relative;
-    bottom: 5em;
-    width: 70%;
+    bottom: 4rem;
+    width: 85%;
 }
 
 #cover {
