--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,9 +29,13 @@ body {
     flex-direction: row;
     justify-content: space-between;
 }
+a{
+    color: #000;
+    text-decoration: none;
+}
 
 .heading {
-    color: #fff;
+    color:black;
     text-align: center;
     text-shadow: 2px 2px 5px #2eb0cb;
     font-size: 4rem;
@@ -124,19 +128,18 @@ body {
 .btn {
     display: inline-block;
     font-size: 1.6rem;
-    padding:0 3rem;
+    padding:1rem;
     cursor: pointer;
     border: none;
     outline: none;
-    border-radius: 4rem;
-    color: #a0a0a0;
+    border-radius: 50%;
+    color: black;
     transition: background 200ms linear, color 200ms linear;
 }
 
 .special-btn {
-    background-color: #000;
-    color: #fff;
-    font-size: 2.2rem;
+    color: black;
+    font-size: 4rem;
     margin: 0 1rem;
     padding: 1.4rem;
     cursor: pointer;
