--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,13 +15,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
     -webkit-tap-highlight-color: transparent;
+    
 }
 
 .container {
-    margin-top: 10px;
+    margin-top: 2rem;
     width: 40rem;
+    height: 85vh;
+    background-color: red;
 }
 
 
