--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,163 +1,183 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 50%;
-}
-
 body {
-    font-family: 'Poppins', 'Montserrat', sans-serif;
-    background-color: #232328;
-    background: rgb(251, 251, 251);
+    
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+  background-color: rgb(6, 121, 41);
+  }
+  
+  .player{
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+  .wrapper{
+    border: 1px solid transparent;
+    border-radius: 20px;
+    background-color: rgb(27, 141, 18);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
+  .wrapper .title{
     display: flex;
     justify-content: center;
-    align-items: center;
-    -webkit-tap-highlight-color: transparent;
+  }
     
-}
-
-.container {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    width: 40rem;
-    height: 85vh;
-}
-
-
-.header{
+  .home{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-a{
-    color: #000;
+  }
+
+  a{
     text-decoration: none;
-}
+    color: rgb(255, 255, 255);
+    margin:0px 15px;
+  }
+  
+  .details {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  }
+  
+  .track-art {
+  margin: 10px;
+  height: 150px;
+  width: 150px;
+  border:2px solid 	rgb(255, 255, 255);
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  -moz-box-shadow: 0px 4px 3px black;
+  -webkit-box-shadow: 0px 4px 3px black;
+  box-shadow: 0px 4px 3px black;
+  -moz-border-radius:190px;
+  -webkit-border-radius:190px;
+  border-radius:190px;
+  }
+  
+  
+  
 
-.heading {
-    color:black;
-    text-align: center;
-    text-shadow: 2px 2px 5px #2eb0cb;
-    font-size: 4rem;
-    font-weight: 400;
-}
-
-
-
-.music-container {
-    background: rgb(255, 255, 255);
-    border-radius: 1rem;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
-    padding: 1rem 2rem;
-    margin-top: 5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #000000;
-}
-
-#cover-box {
-    border-radius: 1rem;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
-    position: relative;
-    bottom: 4rem;
-    width: 85%;
-}
-
-#cover {
-    border-radius: inherit;
-    display: block;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: center center;
-}
-
-#music-box {
-    width: 100%;
-}
-
-#music-info {
-    text-align: center;
-    width: 100%;
-    position: relative;
-    bottom: 2rem;
-}
-
-#title {
-    font-size: 2rem;
-    font-weight: 600;
-}
-
-#artist {
-    font-size: 1.4rem;
-    font-weight: 500;
-}
-
-#progress-container {
-    height: 7px;
-    width: 100%;
-    background-color: rgb(255 255 255 / 33%);
-    margin: 2rem 0 1rem;
-    cursor: pointer;
-    border-radius: 8px;
-}
-
-#progress {
-    background-color: #000;
-    width: 0%;
-    height: inherit;
-    border-radius: inherit;
-    transition: width 100ms ease-in;
-}
-
-#timer-bar {
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.7rem;
-}
-
-#control-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding:  1rem;
-}
-
-.btn {
-    display: inline-block;
-    font-size: 2rem;
-    padding: 2rem;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    color: black;
-    transition: background 200ms linear, color 200ms linear;
-}
-
-.special-btn {
-    color: black;
-    font-size: 6rem;
-    margin: 0 1rem;
-    padding: 1.4rem;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    border-radius: 4rem;
-    transition: opacity 200ms linear;
-}
-
-@media (hover: hover) {
-    .btn:hover {
-        background-color: #d8d8d8;
-        color: #545454;
-    }
-    .special-btn:hover {
-        opacity: 0.75;
-    }
-}
+  .track-name {
+  font-size: 1.5rem;
+  font-weight: bold;
+  }
+  
+  .track-artist {
+  margin-top: 5px;
+  font-size: 1rem;
+  }
+  .track-writer{
+      margin-top: 3px;
+      font-size: .7rem;
+  }
+  
+  .buttons {
+  font-size: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 10px;
+  }
+  .active{
+      color: rgb(0, 0, 0);
+  }
+  
+  .repeat-track,
+  .random-track,
+  .playpause-track,
+  .prev-track,
+  .next-track {
+  padding: 20px;
+  opacity: 0.8;
+  transition: opacity .2s;
+  }
+  
+  .repeat-track:hover,
+  .random-track:hover,
+  .playpause-track:hover,
+  .prev-track:hover,
+  .next-track:hover {
+  opacity: 1.0;
+  }
+  
+  .slider_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+  
+  .seek_slider, .volume_slider {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 5px;
+  background:rgb(255, 255, 255);
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  }
+  
+  .seek_slider::-webkit-slider-thumb,
+  .volume_slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: rgb(27, 141, 18);
+  border: 3px solid rgb(255, 255, 255);
+  cursor: grab;
+  border-radius: 100%;
+  }
+  
+  .seek_slider:hover,
+  .volume_slider:hover {
+  opacity: 1.0;
+  }
+  
+  .seek_slider {
+  width: 60%;
+  }
+  
+  .volume_slider {
+  width: 30%;
+  }
+  
+  .current-time,
+  .total-duration {
+  padding: 10px;
+  }
+  
+  i.fa-volume-down,
+  i.fa-volume-up {
+  padding: 10px;
+  }
+  
+  i,
+  i.fa-play-circle,
+  i.fa-pause-circle,
+  i.fa-step-forward,
+  i.fa-step-backward,
+  p {
+  cursor: pointer;
+  }
+  .randomActive{
+      color:rgb(244, 64, 64);
+  }
+  .loopActive{
+    color: red;
+  }
+  .rotate {
+      animation: rotation 8s infinite linear;
+  }
+  @keyframes rotation {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(359deg);
+      }
+  }
