--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
   background-color: rgb(6, 121, 41);
+  text-shadow:3px 0px 3px rgb(0, 0, 0);
   }
   
   .player{
@@ -21,18 +22,20 @@ body {
   .wrapper .title{
     display: flex;
     justify-content: center;
+    text-shadow:3px 0px 3px rgb(0, 0, 0);
   }
-    
   .home{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    
   }
 
   a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     margin:0px 15px;
+    text-shadow:3px 0px 3px rgb(0, 0, 0);
   }
   
   .details {
@@ -63,16 +66,19 @@ body {
 
   .track-name {
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 400;
+  text-shadow:3px 0px 3px rgb(0, 0, 0);
   }
   
   .track-artist {
   margin-top: 5px;
   font-size: 1rem;
+  text-shadow:3px 0px 3px rgb(0, 0, 0);
   }
   .track-writer{
       margin-top: 3px;
       font-size: .7rem;
+      text-shadow:3px 0px 3px rgb(0, 0, 0);
   }
   
   .buttons {
@@ -92,7 +98,7 @@ body {
   .prev-track,
   .next-track {
   padding: 20px;
-  opacity: 0.8;
+  opacity: 1;
   transition: opacity .2s;
   }
   
@@ -102,6 +108,7 @@ body {
   .prev-track:hover,
   .next-track:hover {
   opacity: 1.0;
+  transform: scale(1.2);
   }
   
   .slider_container {
@@ -135,7 +142,7 @@ body {
   
   .seek_slider:hover,
   .volume_slider:hover {
-  opacity: 1.0;
+  opacity: .7;
   }
   
   .seek_slider {
@@ -160,10 +167,9 @@ body {
   i.fa-play-circle,
   i.fa-pause-circle,
   i.fa-step-forward,
-  i.fa-step-backward,
-  p {
-  cursor: pointer;
-  }
+  i.fa-step-backward{
+       cursor: pointer;
+     }
   .randomActive{
       color:rgb(244, 64, 64);
   }
