--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    
+  margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
   background-color: rgb(6, 121, 41);
@@ -14,6 +14,7 @@ body {
     justify-content: center;
 }
   .wrapper{
+    width: 95%;
     border: 1px solid transparent;
     border-radius: 20px;
     background-color: rgb(27, 141, 18);
@@ -37,6 +38,7 @@ body {
     color: rgb(255, 255, 255);
     margin:0px 15px;
     text-shadow:3px 0px 3px rgb(0, 0, 0);
+    font-size: 1.5rem;
   }
   .fa-house:hover,
   .fa-bars:hover{
@@ -52,8 +54,8 @@ body {
   
   .track-art {
   margin: 10px;
-  height: 150px;
-  width: 150px;
+  height: 200px;
+  width: 200px;
   border:2px solid 	rgb(255, 255, 255);
   background-size: cover;
   background-position: center;
@@ -87,10 +89,11 @@ body {
   }
   
   .buttons {
-  font-size: 10px;
+  font-size: .7rem;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   margin-bottom: 10px;
   }
   .active{
